run zabbix agent; use getopt to parse args
the following command line arguments were added:
* --database-host defaults to localhost (not tested with external hosts)
* --core-config  name of config file defaults to 'stellar-core.cfg'
* --zabbix-server
* --zabbix-hostname
* --seed necessary for validating nodes

currently zabbix agent installation is not optional

--- a/standalone/core/etc/stellar-core.cfg
+++ b/standalone/core/etc/stellar-core.cfg
@@ -5,14 +5,14 @@ HTTP_PORT=11626
 PUBLIC_HTTP_PORT=true
 RUN_STANDALONE=true
 
-NETWORK_PASSPHRASE="Standalone Network ; February 2017"
+NETWORK_PASSPHRASE="__NETWORK__"
 
 NODE_SEED="SDQVDISRYN2JXBS7ICL7QJAEKB3HWBJFP2QECXG7GZICAHBK4UNJCWK2 self"
 NODE_IS_VALIDATOR=true
 
-#DATABASE="postgresql://dbname=stellar user=postgres password=password host=localhost"
+#DATABASE="postgresql://dbname=stellar user=postgres password=password host=__DB_HOST__"
 #DATABASE="sqlite3://stellar.db"
-DATABASE="postgresql://dbname=core host=localhost user=stellar password=__PGPASS__"
+DATABASE="postgresql://dbname=core host=__DB_HOST__ user=stellar password=__PGPASS__"
 
 COMMANDS=["ll?level=debug"]
 
