--- a/testnet/core/etc/stellar-core.cfg
+++ b/testnet/core/etc/stellar-core.cfg
@@ -2,14 +2,16 @@ HTTP_PORT=11626
 PUBLIC_HTTP_PORT=true
 LOG_FILE_PATH=""
 
-NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
+NETWORK_PASSPHRASE="__NETWORK__"
+__NODE_SEED_LINE__
+NODE_IS_VALIDATOR=__NODE_IS_VALIDATOR__
 
 KNOWN_PEERS=[
 "core-testnet1.stellar.org",
 "core-testnet2.stellar.org",
 "core-testnet3.stellar.org"]
 
-DATABASE="postgresql://dbname=core host=localhost user=stellar password=__PGPASS__"
+DATABASE="postgresql://dbname=core host=__DB_HOST__ user=stellar password=__PGPASS__"
 UNSAFE_QUORUM=true
 FAILURE_SAFETY=1
 CATCHUP_RECENT=8640
