--- a/common/supervisor/etc/supervisord.conf
+++ b/common/supervisor/etc/supervisord.conf
@@ -13,6 +13,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
+[program:zabbix-agent]
+user=zabbix
+command=/usr/sbin/zabbix_agentd --foreground --config /opt/stellar/zabbix/etc/zabbix_agentd.conf
+stopsignal=INT
+autostart=true
+autorestart=true
+priority=5
+
 [program:postgresql]
 user=postgres
 command=/usr/lib/postgresql/9.4/bin/postgres -D "/opt/stellar/postgresql/data" -c config_file=/opt/stellar/postgresql/etc/postgresql.conf
