--- a/pubnet/core/etc/stellar-core.cfg
+++ b/pubnet/core/etc/stellar-core.cfg
@@ -1,10 +1,12 @@
 HTTP_PORT=11626
-PUBLIC_HTTP_PORT=true
+PUBLIC_HTTP_PORT=false
 LOG_FILE_PATH=""
 
-DATABASE="postgresql://dbname=core host=localhost user=stellar password=__PGPASS__"
-NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
+DATABASE="postgresql://dbname=core host=__DB_HOST__ user=stellar password=__PGPASS__"
+NETWORK_PASSPHRASE="__NETWORK__"
 CATCHUP_RECENT=8640
+__NODE_SEED_LINE__
+NODE_IS_VALIDATOR=__NODE_IS_VALIDATOR__
 
 
 NODE_NAMES=[
