check if db is configured on remote host
add postgres user to .pgpass file
make check if 'core' and 'horizon' databases are created in init_db
check if schema is for database is applied in init_stellar_core and
init_horizon respectivly

--- a/factury/core/etc/factury1.cfg
+++ b/factury/core/etc/factury1.cfg
@@ -9,6 +9,10 @@ CATCHUP_RECENT=8640
 __NODE_SEED_LINE__
 NODE_IS_VALIDATOR=__NODE_IS_VALIDATOR__
 
+# temporary
+UNSAFE_QUORUM=true
+FAILURE_SAFETY=0
+
 
 NODE_NAMES=[
 "GBFPN34SBX6ESNQI6MIYSM3N6ILIIF7SJBTRTIRTYETUYLHAAXKT5WJ5  factury_watcher2",
