--- a/factury/core/etc/factury3.cfg
+++ b/factury/core/etc/factury3.cfg
@@ -9,6 +9,10 @@ CATCHUP_RECENT=8640
 __NODE_SEED_LINE__
 NODE_IS_VALIDATOR=__NODE_IS_VALIDATOR__
 
+# temporary
+FAILURE_SAFETY=0
+UNSAFE_QUORUM=true
+
 
 NODE_NAMES=[
 "GDMO3XYREJSEZ3VWVOZBKOVN4HY6WTFAYT3ECFQXC62FSY4HWV6AM3L6  factury_watcher1",
