--- a/factury/core/etc/factury2.cfg
+++ b/factury/core/etc/factury2.cfg
@@ -31,11 +31,11 @@ VALIDATORS=[
 ]
 
 [HISTORY.h1]
-get="wget -q http://factury-mainnet-history.s3.amazonaws.com/node1/{0} -O {1}"
+get="aws s3 cp s3://fic-network-node-1/{0} {1}"
 
 [HISTORY.h2]
-get="wget -q http://factury-mainnet-history.s3.amazonaws.com/node2/{0} -O {1}"
+put="aws s3 cp {0} s3://fic-network-node-2/{1}"
+get="aws s3 cp s3://fic-network-node-2/{0} {1}"
 
 [HISTORY.h3]
-get="wget -q http://factury-mainnet-history.s3.amazonaws.com/node3/{0} -O {1}"
-
+get="aws s3 cp s3://fic-network-node-3/{0} {1}"
