validator 0 starts consensus

--- a/factury/core/etc/factury3.cfg
+++ b/factury/core/etc/factury3.cfg
@@ -15,6 +15,7 @@ UNSAFE_QUORUM=true
 
 
 NODE_NAMES=[
+"GDPHBHKJQNP52KXERAEXGXNFVTDR26SV3ZRFOYDUFYUM2VXHUYODD6VF  factury_watcher0",
 "GDMO3XYREJSEZ3VWVOZBKOVN4HY6WTFAYT3ECFQXC62FSY4HWV6AM3L6  factury_watcher1",
 "GBFPN34SBX6ESNQI6MIYSM3N6ILIIF7SJBTRTIRTYETUYLHAAXKT5WJ5  factury_watcher2",
 ]
@@ -31,6 +32,10 @@ VALIDATORS=[
 "$factury_watcher1",
 "$factury_watcher2"
 ]
+
+[QUORUM_SET.1]
+THRESHOLD_PERCENT=100
+VALIDATORS=["$factury_watcher0"]
 
 [HISTORY.h1]
 get="aws s3 cp s3://fic-network-node-1/{0} {1}"
