--- a/factury/core/etc/factury0.cfg
+++ b/factury/core/etc/factury0.cfg
@@ -5,8 +5,8 @@ RUN_STANDALONE=true
 DATABASE="postgresql://dbname=core host=__DB_HOST__ user=stellar password=__PGPASS__"
 NETWORK_PASSPHRASE="__NETWORK__"
 
-# NODE_SEED="SDQVDISRYN2JXBS7ICL7QJAEKB3HWBJFP2QECXG7GZICAHBK4UNJCWK2 self"
-__NODE_SEED_LINE__
+NODE_SEED="SCTKZIX7PGIAYQRURYWQFXT5ITFOYBWRQAJBNH3EZ4QSYST6GOUGQIRI self"
+# __NODE_SEED_LINE__
 NODE_IS_VALIDATOR=true
 
 
@@ -19,6 +19,6 @@ COMMANDS=["ll?level=debug"]
 THRESHOLD_PERCENT=100
 VALIDATORS=["$self"]
 
-[HISTORY.vs]
+[HISTORY.h0]
 put="aws s3 cp {0} s3://fic-network-node-1/{1}"
 get="aws s3 cp s3://fic-network-node-1/{0} {1}"
