--- a/factury/core/etc/factury2.cfg
+++ b/factury/core/etc/factury2.cfg
@@ -15,6 +15,7 @@ UNSAFE_QUORUM=true
 
 
 NODE_NAMES=[
+"GDPHBHKJQNP52KXERAEXGXNFVTDR26SV3ZRFOYDUFYUM2VXHUYODD6VF  factury_watcher0",
 "GDMO3XYREJSEZ3VWVOZBKOVN4HY6WTFAYT3ECFQXC62FSY4HWV6AM3L6  factury_watcher1",
 "GB6FAIIWKNKJX3KPZLFHHCBLVTJNQ235X7AYK4RDTTL7KKYIX6HOPXEC  factury_watcher3",
 ]
@@ -31,6 +32,10 @@ VALIDATORS=[
 "$factury_watcher1",
 "$factury_watcher3"
 ]
+
+[QUORUM_SET.1]
+THRESHOLD_PERCENT=100
+VALIDATORS=["$factury_watcher0"]
 
 [HISTORY.h1]
 get="aws s3 cp s3://fic-network-node-1/{0} {1}"
