--- a/factury/core/etc/factury0.cfg
+++ b/factury/core/etc/factury0.cfg
@@ -1,6 +1,6 @@
 HTTP_PORT=11626
 PUBLIC_HTTP_PORT=true
-RUN_STANDALONE=true
+LOG_FILE_PATH=""
 
 DATABASE="postgresql://dbname=core host=__DB_HOST__ user=stellar password=__PGPASS__"
 NETWORK_PASSPHRASE="__NETWORK__"
