QUORUM_SET misunderstanding

--- a/factury/core/etc/factury3.cfg
+++ b/factury/core/etc/factury3.cfg
@@ -27,13 +27,17 @@ KNOWN_PEERS=[
 ]
 
 [QUORUM_SET]
+THRESHOLD_PERCENT=20
+VALIDATORS=[]
+
+[QUORUM_SET.1]
 THRESHOLD_PERCENT=75
 VALIDATORS=[
 "$factury_watcher1",
 "$factury_watcher2"
 ]
 
-[QUORUM_SET.1]
+[QUORUM_SET.2]
 THRESHOLD_PERCENT=100
 VALIDATORS=["$factury_watcher0"]
 
