fix aws credentials not found

--- a/factury/core/etc/factury1.cfg
+++ b/factury/core/etc/factury1.cfg
@@ -33,7 +33,7 @@ VALIDATORS=[
 ]
 
 [HISTORY.h1]
-put="aws s3 cp {0} s3://fic-network-node-1/{1}"
+put="aws s3 cp --acl public-read {0} s3://fic-network-node-1/{1}"
 get="aws s3 cp s3://fic-network-node-1/{0} {1}"
 
 [HISTORY.h2]
