--- a/factury/core/etc/factury3.cfg
+++ b/factury/core/etc/factury3.cfg
@@ -27,19 +27,11 @@ KNOWN_PEERS=[
 ]
 
 [QUORUM_SET]
-THRESHOLD_PERCENT=20
-VALIDATORS=[]
-
-[QUORUM_SET.1]
-THRESHOLD_PERCENT=75
+THRESHOLD_PERCENT=51
 VALIDATORS=[
 "$factury_watcher1",
 "$factury_watcher2"
 ]
-
-[QUORUM_SET.2]
-THRESHOLD_PERCENT=100
-VALIDATORS=["$factury_watcher0"]
 
 [HISTORY.h1]
 get="aws s3 cp s3://fic-network-node-1/{0} {1}"
@@ -48,5 +40,5 @@ get="aws s3 cp s3://fic-network-node-1/{0} {1}"
 get="aws s3 cp s3://fic-network-node-2/{0} {1}"
 
 [HISTORY.h3]
-put="aws s3 cp {0} s3://fic-network-node-3/{1}"
+put="aws s3 cp --acl public-read {0} s3://fic-network-node-3/{1}"
 get="aws s3 cp s3://fic-network-node-3/{0} {1}"
