--- a/factury/core/etc/factury1.cfg
+++ b/factury/core/etc/factury1.cfg
@@ -26,8 +26,9 @@ KNOWN_PEERS=[
 ]
 
 [QUORUM_SET]
-THRESHOLD_PERCENT=75
+THRESHOLD_PERCENT=51
 VALIDATORS=[
+"$self",
 "$factury_watcher2",
 "$factury_watcher3"
 ]
