--- a/factury/core/etc/factury2.cfg
+++ b/factury/core/etc/factury2.cfg
@@ -15,7 +15,6 @@ UNSAFE_QUORUM=true
 
 
 NODE_NAMES=[
-"GDPHBHKJQNP52KXERAEXGXNFVTDR26SV3ZRFOYDUFYUM2VXHUYODD6VF  factury_watcher0",
 "GDMO3XYREJSEZ3VWVOZBKOVN4HY6WTFAYT3ECFQXC62FSY4HWV6AM3L6  factury_watcher1",
 "GB6FAIIWKNKJX3KPZLFHHCBLVTJNQ235X7AYK4RDTTL7KKYIX6HOPXEC  factury_watcher3",
 ]
@@ -30,6 +29,7 @@ KNOWN_PEERS=[
 THRESHOLD_PERCENT=51
 VALIDATORS=[
 "$factury_watcher1",
+"$self",
 "$factury_watcher3"
 ]
 
