--- a/factury/core/etc/factury0.cfg
+++ b/factury/core/etc/factury0.cfg
@@ -1,24 +1,48 @@
 HTTP_PORT=11626
-PUBLIC_HTTP_PORT=true
+PUBLIC_HTTP_PORT=false
 LOG_FILE_PATH=""
 
 DATABASE="postgresql://dbname=core host=__DB_HOST__ user=stellar password=__PGPASS__"
 NETWORK_PASSPHRASE="__NETWORK__"
+CATCHUP_RECENT=8640
 
-NODE_SEED="SCTKZIX7PGIAYQRURYWQFXT5ITFOYBWRQAJBNH3EZ4QSYST6GOUGQIRI self"
-# __NODE_SEED_LINE__
-NODE_IS_VALIDATOR=true
+__NODE_SEED_LINE__
+NODE_IS_VALIDATOR=__NODE_IS_VALIDATOR__
 
 
-UNSAFE_QUORUM=true
-FAILURE_SAFETY=0
 
-COMMANDS=["ll?level=debug"]
-#The public keys of the Stellar testnet servers
+
+
+
+NODE_NAMES=[
+"GDMO3XYREJSEZ3VWVOZBKOVN4HY6WTFAYT3ECFQXC62FSY4HWV6AM3L6  factury_watcher1",
+"GBFPN34SBX6ESNQI6MIYSM3N6ILIIF7SJBTRTIRTYETUYLHAAXKT5WJ5  factury_watcher2",
+"GB6FAIIWKNKJX3KPZLFHHCBLVTJNQ235X7AYK4RDTTL7KKYIX6HOPXEC  factury_watcher3",
+]
+
+# edit known peers
+KNOWN_PEERS=[
+"54.221.6.85",
+"35.172.209.131",
+"54.174.247.82"
+]
+
+
+# configure quorum set
 [QUORUM_SET]
 THRESHOLD_PERCENT=100
 VALIDATORS=["$self"]
 
+# configure history archive (optional)
 [HISTORY.h0]
-put="aws s3 cp {0} s3://fic-network-node-1/{1}"
-get="aws s3 cp s3://fic-network-node-1/{0} {1}"
+put="aws s3 cp {0} s3://my-bucket/{1}"
+get="aws s3 cp s3://my-bucket/{0} {1}"
+
+[HISTORY.h1]
+get="aws s3 cp s3://https://s3.amazonaws.com/fic-network-node-1/{0} {1}"
+
+[HISTORY.h2]
+get="aws s3 cp s3://https://s3.amazonaws.com/fic-network-node-2/{0} {1}"
+
+[HISTORY.h3]
+get="aws s3 cp s3://https://s3.amazonaws.com/fic-network-node-3/{0} {1}"
